user can sign up

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper container">
     <header>
-      <h1>
-        <a href="/">Just Tech News</a>
-      </h1>
-    </header>
+        <h1>
+            <a href="/">My Tech Blog</a>
+        </h1>
+        <nav>
+            <a href="/login">login</a>
+        </nav>
+  </header>
     <main>
       {{{ body }}}
     </main>
