--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,10 +1,11 @@
+{{!-- {{> post-data post }} --}}
+
 <article class="post">
   <div class="title">
     <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
-    {{!-- <span>({{post.post_url}})</span> --}}
   </div>
   <div class="meta">
-    <em>Posted by {{post.user.username}} on {{post.created_at}}</em>
+    <em>Posted by {{post.user.username}} on {{format_date post.created_at}}</em>
   </div>
   <div class="body">
     {{post.post_text}}
@@ -24,18 +25,7 @@
 </form>
 {{/if}}
 
-<div class="comments">
-  {{#each post.comments}}
-  <section class="comment">
-    <div class="meta">
-      {{user.username}} on {{created_at}}
-    </div>
-    <div class="text">
-      {{comment_text}}
-    </div>
-  </section>
-  {{/each}}
-</div>
+{{> comments post.comments}}
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
