dashboard set up and user can post blogs

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,12 +16,14 @@
             <a href="/">My Tech Blog</a>
         </h1>
         <nav>
-        {{#if loggedIn}}
-        <a href="/dashboard">dashboard</a>
+          {{#if loggedIn}}
         <button id="logout" class="btn-no-style">logout</button>
         {{else}}
         <a href="/login">login</a>
         {{/if}}
+          <a href="/">home</a>
+          <a href="/dashboard">dashboard</a>
+        
         </nav>
   </header>
     <main>
