--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,9 @@
         </nav>
   </header>
     <main>
+      <div class="container">
       {{{ body }}}
+      </div>
     </main>
     <footer>
       Thanks for visiting!
