title and body now editable

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<button type="submit" class="btn btn-primary" id="create" onclick="addClass()">Create</button>
+<button type="submit" class="btn btn-primary" id="create" onclick="addClass()">Create a New Blog Post</button>
 
 <section id="create-blog" class="hide">
   <h2>Create New Blog Post</h2>
