--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,12 +7,12 @@
     <div>
       <input name="post-title" type="text" value="{{post.title}}" />
     </div>
-    {{!-- <div>
-      <textarea name="post-text" id="post-text" type="text" value="{{post.post_text}}"></textarea>
-    </div> --}}
     <div>
-      <input name="post-text" type="text" value="{{post.post_text}}" />
+      <textarea name="post-text" id="post-text">{{post.post_text}}</textarea>
     </div>
+    {{!-- <div>
+      <input name="post-text" type="text" value="{{post.post_text}}" />
+    </div> --}}
     <div>
       Posted by {{post.user.username}} on {{format_date post.created_at}}
       |
