--- a/views/partials/post-data.handlebars
+++ b/views/partials/post-data.handlebars
@@ -10,5 +10,7 @@
 
 
     <h5 class="card-title"><a href="/post/{{id}}">{{title}}</a></h5>
+    
     <h6 class="card-subtitle mb-2 text-muted"><em><span>Posted by {{user.username}} on {{format_date created_at}}</span></em></h6>
     <p class="card-text">{{post_text}}</p>
+    <h6 class="card-subtitle mb-2 text-muted"><em><span>{{comments.length}} Comment(s)</span></em></h6>
