--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -2,7 +2,7 @@
 
 <article class="post">
   <div class="title">
-    <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
+    <a href="{{post.post_url}}">{{post.title}}</a>
   </div>
   <div class="meta">
     <em>Posted by {{post.user.username}} on {{format_date post.created_at}}</em>
