--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -16,7 +16,7 @@
 </section>
 
 {{#if posts.length}}
-<h2>Your Posts</h2>
+<h2>My Posts</h2>
 {{#each posts as |post|}}
 <div class="card" style="width: 18rem;">
     
