--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,16 +6,20 @@
   {{/each}}
 </ol> --}}
 
-{{#if posts.length}}
-<h2>All Posts</h2>
-{{#each posts as |post|}}
-<div class="card" style="width: 18rem;">
-    
-  <div class="card-body">
-    {{> post-data post }}
-    <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
-  </div>
-  
-</div>
-{{/each}}
-{{/if}}
+  {{#if posts.length}}
+  <h2>All Posts</h2>
+
+  {{#each posts as |post|}}
+
+    <div class="card p-2 m-2 rounded" style="width: 18rem;">
+        
+      <div class="card-body">
+        {{> post-data post }}
+        <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+      </div>
+     
+    </div>
+
+
+  {{/each}}
+  {{/if}}
