--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,11 @@
   </header>
     <main>
       <div class="container">
+        <div class="row">
+            
       {{{ body }}}
+            
+        </div>
       </div>
     </main>
     <footer>
