--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,10 +1,10 @@
 {{!-- {{> post-data post }} --}}
-
+<div class="team-area col-9 justify-content-center">
 <article class="post">
   <div class="title">
-    <a href="{{post.post_url}}">{{post.title}}</a>
+    <h3>{{post.title}}</h3>
   </div>
-  <div class="meta">
+  <div class="muted-text">
     <em>Posted by {{post.user.username}} on {{format_date post.created_at}}</em>
   </div>
   <div class="body">
@@ -27,6 +27,7 @@
 
 {{> comments post.comments}}
 
+</div>
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
 {{/if}}
