--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,15 +7,17 @@
 </ol> --}}
 
   {{#if posts.length}}
-  <h2>All Posts</h2>
-
+  <div class="d-flex justify-content-between">
+    <h2 class="">All Posts</h2>  
+    <p class=""><a href='/usersort'>sort by user</a> | <a href='/'>sort by date</a></p>
+  </div>
   {{#each posts as |post|}}
 
-    <div class="card p-2 m-2 rounded" style="width: 18rem;">
+    <div class="card p-2 m-2 rounded">
         
       <div class="card-body">
         {{> post-data post }}
-        <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a>
+        {{!-- <a href="/dashboard/edit/{{post.id}}" class="edit-link">Edit post</a> --}}
       </div>
      
     </div>
