--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,17 +1,26 @@
-<form class="login-form">
-  <div class="form-group">
-    <label for="username-login">Username</label>
-    <input type="username" id="username-login" />
+<div class="card p-2 m-2 rounded">
+  <div class="card-body">
+    <h2 class="">Log In</h2> 
+    <form class="login-form">
+      <div class="form-group">
+        <label for="username-login">Username</label>
+        <input type="username" id="username-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">Password</label>
+        <input type="password" id="password-login" />
+      </div>
+      <div>
+        <button type="submit" class="btn btn-primary">login</button>
+      </div>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="password-login">Password</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit" class="btn btn-primary">login</button>
-  </div>
-</form>
+</div>
 
+<div class="card p-2 m-2 rounded">
+    
+  <div class="card-body">
+    <h2 class="">Sign Up</h2> 
 <form class="signup-form">
   <div class="form-group">
     <label for="username-signup">Username</label>
@@ -25,5 +34,8 @@
     <button type="submit" class="btn btn-primary">Signup</button>
   </div>
 </form>
+</div>
+</div>
+
 
 <script src="/javascript/login.js"></script>
