--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -19,7 +19,7 @@
       <a href="/post/{{post.id}}">{{post.comments.length}} Comment(s)</a>
     </div>
     <button type="submit">Save post</button>
-    <button type="button" class="delete-post-btn">Delete post</button>
+    <button type="button" class="delete-btn">Delete post</button>
   </form>
 </article>
 
