--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
         </h1>
         <nav>
           {{#if loggedIn}}
-          <button id="logout" class="btn-no-style">logout</button> | 
+          <button id="logout" class="btn-link">logout</button> | 
           {{else}}
           <a href="/login">login</a> | 
           {{/if}}
