--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,4 @@
+<div class="row justify-content-center">
 <div class="card p-2 m-2 rounded">
   <div class="card-body">
     <h2 class="">Log In</h2> 
@@ -34,6 +35,7 @@
       </div>
     </form>
   </div>
+</div>
 </div>
 
 <script src="/javascript/login.js"></script>
