--- a/views/partials/post-data.handlebars
+++ b/views/partials/post-data.handlebars
@@ -13,4 +13,4 @@
     <h6 class="card-subtitle mb-2 muted-text"><em><span>Posted by {{user.username}} on {{format_date created_at}}</span></em></h6>
     <p class="card-text">{{shorten_string post_text}} <em><a href="/post/{{id}}">Read more</a></em></p>
     <h6 class="card-subtitle mb-2 muted-text"><em><span>{{comments.length}} Comment(s)</span></em></h6>
-    <a href="/post/{{id}}" class="stretched-link"></a>
+    {{!-- <a href="/post/{{id}}" class="stretched-link"></a> --}}
