fixed logout hover style issue

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
       </div>
     </main>
     <footer>
-      <p class="text-muted">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Christina Sheppard</p>
+      <p class="text-muted">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Christy Sheppard</p>
     </footer>
   </div>
 
