--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -123,7 +123,7 @@
     /* margin-left: 16px; */
   }
   
-  .btn-no-style:hover {
+  .btn-link:hover {
     background: none;
     color: #3486eb;
   }
