--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <button type="submit" class="btn btn-primary" id="create" onclick="addClass()">Create a New Blog Post</button>
 
-<section id="create-blog" class="hide">
+<section id="create-blog" class="hide pt-3">
   <h2>Create New Blog Post</h2>
   <form class="submit-post-form">
     <div>
