added js file for toggler

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -70,6 +70,7 @@
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
