--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,10 @@
     color: #FFF!important;
     background-color: #333!important;
   }
+
+  nav {
+    font-weight: bold;
+  }
   
   a {
     text-decoration: none!important;
@@ -111,12 +115,12 @@
     width: 19rem!important;
   }
   
-  .btn-no-style {
+  .btn-link {
     background: none;
     border: none;
     padding: 0;
     cursor: pointer;
-    text-decoration: none;
+    text-decoration: none!important;
     color: #225ca3;
     font-size: 100%;
     font-weight: bold;
@@ -124,7 +128,7 @@
     margin-left: 16px;
   }
   
-  .btn-no-style:hover {
+  .btn-link:hover {
     background: none;
     color: #3486eb;
   }
@@ -201,3 +205,37 @@
   .go-to-dash {
     
   }
+
+  @media screen and (max-width:575px) {
+    header {
+        padding: 20px 15px 10px 15px;
+        flex-direction: column;
+    }
+    header h1 {
+        font-size: 2.25em;
+        text-align: center;
+    }
+    .card {
+        flex: 100%;
+        margin-right: 20px;
+    }
+    .hero h2 {
+        font-size: 50px;
+    }
+    .btn-link { 
+      font-size: 1.2em;
+      font-weight: 500!important;
+      text-decoration: none!important;
+    }
+    nav { width: 100%!important;}
+    nav ul {
+        margin: 0 9;
+    }
+    nav a {
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+    .sorted { display: none; }
+}
+
+  
