--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,58 +7,28 @@
   <title>My Tech Blog</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="container-fluid">
     <header>
-        {{!-- <nav>
-          
+        <h1 class="identifier">
+            <a href="/">My Tech Blog</a>
+        </h1>
+        <nav>
           {{#if loggedIn}}
-          <button id="logout" class="btn-no-style">logout</button> | 
+          <button id="logout" class="btn-link">logout</button> | 
           {{else}}
           <a href="/login">login</a> | 
           {{/if}}
           <a href="/">home</a> |
           <a href="/dashboard">dashboard</a>
         </nav>
-        <h1 class=""><a href="/">My Tech Blog</a></h1> --}}
-        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #333;">
-  <a class="navbar-brand" href="#">My Tech Blog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      {{#if loggedIn}}<li class="nav-item">
-        <button id="logout" class="btn-no-style">logout</button>
-      </li>
-      {{else}}
-      <li class="nav-item">
-        <a class="nav-link" href="/login">login</a>
-      </li>
-      {{/if}}
-      <li class="nav-item">
-        <a class="nav-link" href="/">home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/dashboard">dashboard</a>
-      </li>
-      
-    </ul>
-  </div>
-</nav>
-
-  </header>
+    </header>
     <main>
       <div class="container">
         <div class="row">
-            
-      {{{ body }}}
-            
+          {{{ body }}}
         </div>
       </div>
     </main>
@@ -70,8 +40,6 @@
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
-  <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
