--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,29 +1,40 @@
-<form class="login-form">
-  <div class="form-group">
-    <label for="username-login">Username</label>
-    <input type="username" id="username-login" />
-  </div>
-  <div class="form-group">
-    <label for="password-login">Password</label>
-    <input type="password" id="password-login" />
-  </div>
-  <div>
-    <button type="submit" class="btn btn-primary">login</button>
-  </div>
-</form>
 
-<form class="signup-form">
-  <div class="form-group">
-    <label for="username-signup">Username</label>
-    <input type="username" id="username-signup" />
-  </div>
-  <div class="form-group">
-    <label for="password-signup">Password</label>
-    <input type="password" id="password-signup" />
-  </div>
-  <div>
-    <button type="submit" class="btn btn-primary">Signup</button>
-  </div>
-</form>
+<div class="card p-2 m-2 rounded" >
+    
+  <div class="card-body">
+        <form class="login-form">
+      <div class="form-group">
+        <label for="username-login">Username</label>
+        <input type="username" id="username-login" />
+      </div>
+      <div class="form-group">
+        <label for="password-login">Password</label>
+        <input type="password" id="password-login" />
+      </div>
+      <div>
+        <button type="submit" class="btn btn-light">login</button>
+      </div>
+    </form>
+</div>
+</div>
+
+<div class="card p-2 m-2 rounded" >
+    
+  <div class="card-body">
+  <form class="signup-form">
+    <div class="form-group">
+      <label for="username-signup">Username</label>
+      <input type="username" id="username-signup" />
+    </div>
+    <div class="form-group">
+      <label for="password-signup">Password</label>
+      <input type="password" id="password-signup" />
+    </div>
+    <div>
+      <button type="submit" class="btn btn-light">Signup</button>
+    </div>
+  </form>
+</div>
+</div>
 
 <script src="/javascript/login.js"></script>
