--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -20,7 +20,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button class="btn btn-warning" type="submit">add comment</button>
   </div>
 </form>
 {{/if}}
