--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,7 @@
 <div class="card p-2 m-2 rounded" >
     
   <div class="card-body">
+    <h2>Login</h2>
         <form class="login-form">
       <div class="form-group">
         <label for="username-login">Username</label>
@@ -21,6 +22,7 @@
 <div class="card p-2 m-2 rounded" >
     
   <div class="card-body">
+    <h2>Signup</h2>
   <form class="signup-form">
     <div class="form-group">
       <label for="username-signup">Username</label>
