--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,9 @@
-<div class="row justify-content-center">
-<div class="card p-2 m-2 rounded">
+
+<div class="card p-2 m-2 rounded" >
+    
   <div class="card-body">
-    <h2 class="">Log In</h2> 
-    <form class="login-form">
+    <h2>Login</h2>
+        <form class="login-form">
       <div class="form-group">
         <label for="username-login">Username</label>
         <input type="username" id="username-login" />
@@ -12,29 +13,29 @@
         <input type="password" id="password-login" />
       </div>
       <div>
-        <button type="submit" class="btn btn-primary">login</button>
+        <button type="submit" class="btn btn-light">login</button>
       </div>
     </form>
-  </div>
+</div>
 </div>
 
-<div class="card p-2 m-2 rounded">
+<div class="card p-2 m-2 rounded" >
+    
   <div class="card-body">
-    <h2 class="">Sign Up</h2> 
-    <form class="signup-form">
-      <div class="form-group">
-        <label for="username-signup">Username</label>
-        <input type="username" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password</label>
-        <input type="password" id="password-signup" />
-      </div>
-      <div>
-        <button type="submit" class="btn btn-primary">Signup</button>
-      </div>
-    </form>
-  </div>
+    <h2>Signup</h2>
+  <form class="signup-form">
+    <div class="form-group">
+      <label for="username-signup">Username</label>
+      <input type="username" id="username-signup" />
+    </div>
+    <div class="form-group">
+      <label for="password-signup">Password</label>
+      <input type="password" id="password-signup" />
+    </div>
+    <div>
+      <button type="submit" class="btn btn-light">Signup</button>
+    </div>
+  </form>
 </div>
 </div>
 
