--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -18,8 +18,8 @@
       |
       <a href="/post/{{post.id}}">{{post.comments.length}} Comment(s)</a>
     </div>
-    <button type="submit">Save post</button>
-    <button type="button" class="delete-btn">Delete post</button>
+    <button class="btn btn-warning" type="submit">Save post</button>
+    <button type="button" class="delete-post-btn btn btn-danger">Delete post</button>
   </form>
 </article>
 
@@ -30,7 +30,7 @@
   </div>
 
   <div>
-    <button type="submit">add comment</button>
+    <button class="btn btn-warning" type="submit">add comment</button>
   </div>
 </form>
 
