--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,10 @@
     color: #FFF!important;
     background-color: #333!important;
   }
+
+  nav {
+    font-weight: bold;
+  }
   
   a {
     text-decoration: none!important;
@@ -109,23 +113,30 @@
   .card {
     background-color: #484848!important;
     width: 19rem!important;
-    box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
-      transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
   }
 
-  .card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+  .btn { color: #333!important;}
+  .btn-warning:hover {
+    color: #000!important;
+    background-color: yellow!important;
+  }
+  .btn-danger { color: #fff!important;}
+  .btn-danger:hover {
+    color: #000!important;
+    background-color: rgb(249, 29, 4)!important;
   }
   
   .btn-link {
     background: none;
+    border: none;
     padding: 0;
     cursor: pointer;
     text-decoration: none!important;
     color: #225ca3;
+    font-size: 100%;
+    font-weight: bold;
     transition: color .1s;
-    /* margin-left: 16px; */
+    margin-left: 16px;
   }
   
   .btn-link:hover {
@@ -133,13 +144,12 @@
     color: #3486eb;
   }
   
-  .delete-btn {
-    color:honeydew;
+  .delete-post-btn {
     background-color: #d41414;
   }
   
-  .delete-btn:hover {
-    background-color: #b40a0a;
+  .delete-post-btn:hover {
+    background-color: #ff643d;
   }
   
   .post {
@@ -203,6 +213,40 @@
     display: none;
   }
 
-  .go-to-dash {
-    
+  .go-to-dash a {
+    color: yellow!important;
   }
+
+  @media screen and (max-width:575px) {
+    header {
+        padding: 20px 15px 10px 15px;
+        flex-direction: column;
+    }
+    header h1 {
+        font-size: 2.25em;
+        text-align: center;
+    }
+    .card {
+        flex: 100%;
+        margin-right: 20px;
+    }
+    .hero h2 {
+        font-size: 50px;
+    }
+    .btn-link { 
+      font-size: 1.2em;
+      font-weight: 500!important;
+      text-decoration: none!important;
+    }
+    nav { width: 100%!important;}
+    nav ul {
+        margin: 0 9;
+    }
+    nav a {
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+    .sorted { display: none; }
+}
+
+  
