--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<button type="submit" class="btn btn-light" id="create" onclick="addClass()">Create a New Blog Post</button>
+<button type="submit" class="btn btn-light" id="create-blog-button" onclick="addClass()">Create a New Blog Post</button>
 
 <section id="create-blog" class="hide pt-3">
   <h2>Create New Blog Post</h2>
