--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,11 +48,6 @@
     background-color: #3486eb;
   }
   
-  .post-list {
-    margin: 0;
-    padding: 0;
-  }
-  
   textarea, input {
     padding: .5%;
     border-radius: 5px;
@@ -61,7 +56,7 @@
   
   textarea:focus, input:focus {
     outline: none;
-    border: 1px solid #3486eb;
+    border: 1px solid yellow;
   }
   
   textarea {
@@ -78,7 +73,7 @@
   }
   
   header {
-    border-bottom: 1px solid #666;
+    border-bottom: 1px dotted #666;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -156,13 +151,7 @@
     margin-bottom: 2%;
     line-height: 150%;
   }
-  
-  .post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: #7d7d7d;
-  }
-  
+
   .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
@@ -181,6 +170,7 @@
   .comment-text {
     color: #808080;
   }
+  
   .comment:nth-child(odd) {
     background-color: #ececec;
   }
@@ -202,11 +192,11 @@
   }
   
   footer {
-    border-top: 1px solid #777;
+    border-top: 1px dotted #777;
     display: flex;
     justify-content: center;
     padding: 1%;
-    font-size: 110%;
+    font-size: 90%;
   }
 
   .hide {
